# wellframe

./: .gitattributes  .gitignore  AUTH_PATTERNS.md  DATABASE.md  FEATURE_PATTERNS.md  README.md  docker-compose.cloud.yml  package-lock.json  package.json  vitest.config.ts
.claude/hooks/: editor-step-hook.py
.codeyam/: .last-reconcile.json  capture.js  data-structure.json  dependency-graph.json  editor.json  first-build-session.json  glossary.json  pending-build-launch  per-test-evidence.json  reconciliation-log.jsonl  runner-timing-history.json  scenario-handlers.js  scenario-interactivity.js  scenario-issues.js  scenario-metrics.js  scenario-mocks.js  scenario-playwright.js  seed-adapter.ts  session-narrative.json  setup-answers.json  stack.json  test-cache.json  test-registry.json  test-run-marker.json
.codeyam/cache/: step-metadata.json
.codeyam/design/: active_tab.json  selection.json
.codeyam/scenarios/: app-primed-dashboard.json  briefingdeck-no-workout.json  (+136 more)
app/: globals.css  layout.tsx  page.tsx
desktop/: .gitignore  README.md  SIGNING.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: RELEASE.md  ROADMAP.md  icon-options.html  ios-companion.md
mcp-server/: .gitignore  README.md  manifest.json  package-lock.json  package.json  tsconfig.json
prisma/: schema.prisma  seed.ts
scratchpad/: build_gloss.py
(+402 files in other folders)
