[package]
name = "wellframe-desktop"
version = "0.1.0"
description = "Wellframe — native desktop wellness console"
authors = ["Wellframe"]
edition = "2021"

# The Tauri app is built as a lib (for mobile targets) plus a thin main.rs.
[lib]
name = "wellframe_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Local-first storage. `bundled` compiles SQLite in-tree so the app carries no
# system-sqlite dependency; SQLCipher encryption is a follow-up (bundled-sqlcipher).
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
